data/all_generated_tests/raw_wast_tests/br_StackCorruption_261.wast
;; 2. **Test Name: Missing Operands on Forward Branch**    - Define a block requiring specific operands. Use a `br` instruction that does not provide enough operands to cover the required types. This helps to test if stack underflow is handled correctly.

(assert_invalid
  (module 
    (func (block (result i32) (br 0 (i32.const 1))))
  )
  "type mismatch"
)